server.log

> ryo-terminal-server@1.0.0 dev
> tsx watch src/index.ts

[INFO] Database initialized and vacuumed. 
[INFO] Auth initialized. 1 users found in database. 
[WARN] SECURITY WARNING: Using default JWT secret. Change this in production by setting JWT_SECRET environment variable! 
[INFO] Ryo Terminal Server running on 0.0.0.0:3001 
📡 WebSocket ready at ws://0.0.0.0:3001/ws

[INFO] WebSocket connection opened 
[INFO] WebSocket connection opened 
[INFO] Session authenticated: admin { sessionId: 'admin-1770042019897', sshHost: undefined }
2:26:38 PM [tsx] change in ./src/pty/manager.ts Restarting...
[INFO] SIGTERM received. Starting graceful shutdown... 
[INFO] Shutting down 1 active PTY sessions... 
[INFO] Graceful shutdown complete. 
c/home/ridgehub/shobha/server/src/ws/handler.ts:6
import { createSession, getSession, destroySession, resizeSession, writeToSession, reattachSession } from "../pty/manager.js";
                                                                                   ^

SyntaxError: The requested module '../pty/manager.js' does not provide an export named 'reattachSession'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:180:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:263:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:547:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:116:5)

Node.js v22.13.0
2:27:36 PM [tsx] change in ./src/ws/handler.ts Rerunning...
c[INFO] Database initialized and vacuumed. 
[INFO] Auth initialized. 1 users found in database. 
[WARN] SECURITY WARNING: Using default JWT secret. Change this in production by setting JWT_SECRET environment variable! 
[INFO] Ryo Terminal Server running on 0.0.0.0:3001 
📡 WebSocket ready at ws://0.0.0.0:3001/ws

[INFO] Cleaning up stale tmux session: ryo-admin-admin-1770042019897 
2:27:53 PM [tsx] change in ./src/api/sessions.ts Restarting...
[INFO] SIGTERM received. Starting graceful shutdown... 
[INFO] Shutting down 0 active PTY sessions... 
[INFO] Graceful shutdown complete. 
c[INFO] Database initialized and vacuumed. 
[INFO] Auth initialized. 1 users found in database. 
[WARN] SECURITY WARNING: Using default JWT secret. Change this in production by setting JWT_SECRET environment variable! 
[INFO] Ryo Terminal Server running on 0.0.0.0:3001 
📡 WebSocket ready at ws://0.0.0.0:3001/ws

[INFO] WebSocket connection opened 
[INFO] Session authenticated: admin {
  sessionId: 'admin-1770042474916',
  sshHost: undefined,
  mode: 'CREATE'
}
[INFO] WebSocket connection opened 
[INFO] WebSocket connection opened 
[INFO] Session authenticated: admin {
  sessionId: 'admin-1770042723105',
  sshHost: undefined,
  mode: 'CREATE'
}
[INFO] WebSocket connection opened 
[INFO] Session authenticated: testuser {
  sessionId: 'testuser-1770042876235',
  sshHost: undefined,
  mode: 'CREATE'
}
[INFO] WebSocket connection opened 
[INFO] Session authenticated: testuser {
  sessionId: 'testuser-1770042876235',
  sshHost: undefined,
  mode: 'JOIN'
}
[INFO] WebSocket detached for testuser { sessionId: 'testuser-1770042876235' }
[INFO] WebSocket detached for testuser { sessionId: 'testuser-1770042876235' }
